@@ -32,6 +32,12 @@ Bug Fixes
 Improvements
 ************
 
+* Use lazy imports in ``bzrlib/merge.py`` so that plugins like ``news_merge``
+  do not cause modules to be loaded unnecessarily just because the plugin
+  registers a merge hook.  This improves ``bzr rocks`` time by about 25%
+  in a default installation (with just the core plugins).
+  (Andrew Bennetts)
+
 Documentation
 *************
 
@@ -43,6 +49,11 @@ Documentation
 
 API Changes
 ***********
+
+* ``bzrlib.knit.KnitSequenceMatcher``, which has been deprecated since
+  2007, has been deleted.  Use ``PatienceSequenceMatcher`` from
+  ``bzrlib.patiencediff`` instead.
+  (Andrew Bennetts)
 
 Internals
 *********
